# FEM_Firmware

./: Cargo.toml  Embed.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
src/: atten.rs  bsp.rs  calibration.rs  log_det.rs  m_c.rs  main.rs  tmp100.rs
