[package]
name = "frontend_module"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rtic = "1.0"
embedded-hal = "0.2"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
heapless = "0.7"
serde_derive = "1.0"
pac194x = "0.1"

[dependencies.atsamd-hal]
path = "/home/kiran/src/atsamd/hal"
features = ["samd21el-rt", "rtic"]

[dependencies.serde-json-core]
version = "0.4"

[dependencies.serde]
version = "1.0"
default-features = false

[dependencies.shared-bus]
version = "0.2"
features = ["cortex-m"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 's'
overflow-checks = false

